--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,21 @@
 html, body, div {margin: 0; padding: 0}
 
-#scene1 {
+#main {
 	width: 640px;
 	height: 480px;
-	background-color: navy;
 	float: left;
+	background-color: rgba(0, 0, 128, 0.5);
+	z-index: 2000;
 }
 
-#scene2 {
+#test {
 	width: 320px;
 	height: 240px;
 	float: right;
+	background-color: rgba(0, 0, 128, 0.5);
+	z-index: 2000;
+}
+
+#bubbles {
 	background-color: black;
 }
