--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,11 @@ html, body { height: 100% }
 	min-height: 500px;
 	height: 100%;
 }
+
+#bubbles100 {
+	background-color: black;
+	float: right;
+	width: 100%;
+	min-height: 500px;
+	height: 100%;
+}
